add wartremover, add scala cats

--- a/versions.properties
+++ b/versions.properties
@@ -19,3 +19,5 @@ version.org.scalatest..scalatest_2.13=3.2.10
 
 version.org.scalatestplus..junit-4-13_2.13=3.2.10.0
 ##                             # available=3.3.0.0-SNAP3
+
+version.org.typelevel..cats-core_2.13=2.6.1
