working on scafi with q learning: hop count example

--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,20 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.github.julien-truffaut..monocle-core_2.13=2.1.0
+##                                        # available=2.2.0-M1
+##                                        # available=3.0.0-M0a
+##                                        # available=3.0.0-M1
+##                                        # available=3.0.0-M2
+##                                        # available=3.0.0-M3
+##                                        # available=3.0.0-M4
+##                                        # available=3.0.0-M5
+##                                        # available=3.0.0-M6
+
+version.dev.optics..monocle-core_2.13=3.1.0
+
+version.dev.optics..monocle-macro_2.13=3.1.0
+
 version.it.unibo.alchemist=11.3.1
 
 version.it.unibo.scafi..scafi-core_2.13=0.3.3
