put first data for swap source program

--- a/versions.properties
+++ b/versions.properties
@@ -17,6 +17,10 @@ version.com.github.julien-truffaut..monocle-core_2.13=2.1.0
 ##                                        # available=3.0.0-M5
 ##                                        # available=3.0.0-M6
 
+version.com.lihaoyi..os-lib_2.13=0.7.8
+
+version.com.lihaoyi..upickle_2.13=1.4.2
+
 version.dev.optics..monocle-core_2.13=3.1.0
 
 version.dev.optics..monocle-macro_2.13=3.1.0
