--- a/versions.properties
+++ b/versions.properties
@@ -31,6 +31,8 @@ version.it.unibo.scafi..scafi-core_2.13=0.3.3
 
 version.junit.junit=4.13.2
 
+version.org.scala-lang.modules..scala-parallel-collections_2.13=1.0.4
+
 version.org.scalatest..scalatest_2.13=3.2.10
 ##                        # available=3.3.0-SNAP2
 ##                        # available=3.3.0-SNAP3
