add tests for swap source

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ gradle-app.setting
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,scala,intellij+all
+
+clock/
+qtables/
