--- a/versions.properties
+++ b/versions.properties
@@ -17,7 +17,11 @@ version.com.github.julien-truffaut..monocle-core_2.13=2.1.0
 ##                                        # available=3.0.0-M5
 ##                                        # available=3.0.0-M6
 
+version.com.lihaoyi..os-lib_2.12=0.7.8
+
 version.com.lihaoyi..os-lib_2.13=0.7.8
+
+version.com.lihaoyi..upickle_2.12=1.4.2
 
 version.com.lihaoyi..upickle_2.13=1.4.2
 
@@ -27,11 +31,17 @@ version.dev.optics..monocle-macro_2.13=3.1.0
 
 version.it.unibo.alchemist=11.3.1
 
+version.it.unibo.scafi..scafi-core_2.12=0.3.3
+
 version.it.unibo.scafi..scafi-core_2.13=0.3.3
 
 version.junit.junit=4.13.2
 
 version.org.scala-lang.modules..scala-parallel-collections_2.13=1.0.4
+
+version.org.scalatest..scalatest_2.12=3.2.10
+##                        # available=3.3.0-SNAP2
+##                        # available=3.3.0-SNAP3
 
 version.org.scalatest..scalatest_2.13=3.2.10
 ##                        # available=3.3.0-SNAP2
@@ -39,5 +49,7 @@ version.org.scalatest..scalatest_2.13=3.2.10
 
 version.org.scalatestplus..junit-4-13_2.13=3.2.10.0
 ##                             # available=3.3.0.0-SNAP3
+
+version.org.typelevel..cats-core_2.12=2.6.1
 
 version.org.typelevel..cats-core_2.13=2.6.1
