first working version of q learning refactors

--- a/src/main/plot/swapSource.yml
+++ b/src/main/plot/swapSource.yml
@@ -1,24 +1,14 @@
 # Goal is to show reactivity to spikes of load, withstanding leader failures, and the benefit of an updated metric
 the_plots_labels:
   - Time                 #0
-  - '# nodes'
-  - '# nodes at risk'
-  - '# nodes overcrowded'
-  - '# nodes warned'
-  - '# nodes monitored'  #5
-  - '# nodes monitor ok'
-  - '# nodes oracle ok'
-  - '# difference'
-  - '# false positives'
-  - '# false negatives' # 10
-  - '# dispersal'
-  - 'neighbour variability' # numNbrsDelta
-  - '# different nbrs'
+  - 'mean ref HopCount'
+  - 'mean classic'
+  - 'mean RL'
+  - 'err_classicHopCount'
+  - 'err_rlbasedHopCount'
+  - 'reward'
 the_plots_formats:
-  - [0,5,2,3,11]
-  - [0,5,6,7]
-  - [0,5,8]
-  - [0,9,10]
+  - [0,4,5]
   #- [0,11,12,13]
 #  - [0,2,3,4,5]
 #y_labels: ['# of requests', '# of requests','','% of utilization of workers']
@@ -41,8 +31,10 @@ force_limit_plot_y:
 #  4: 35
 #  0: 40
 #  3: 80
-#force_limit_plot_x:
-#  0: 800
+start_plot_x:
+  0: 90
+force_limit_plot_x:
+#  0: 820
 #  1: 800
 #  3: 800
 sampling: true
