--- a/src/main/yaml/swapSource.yml
+++ b/src/main/yaml/swapSource.yml
@@ -6,7 +6,7 @@ variables:
   last_greedy_episodes: { formula: 5.0 }
   learning_episodes: { formula: 100.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
-  greedy_each: { formula: learning_episodes / 10 }
+  greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
   episode_length: &episode_length { formula: 80 }
   learn: &learn
@@ -20,19 +20,23 @@ variables:
   initial_value: &initial_value { formula: 0.0 }
   gamma: &gamma { formula: 0.9 }
   window_size: &window_size { formula: 2 }
-  trajectory_size: &trajectory_size { formula: 4 }
+  trajectory_size: &trajectory_size { formula: 2 }
   qtable_folder: &qtable_folder { formula: "'\"qtables\"'" }
   clock_folder: &clock_folder { formula: "'\"clock\"'" }
   # PROGRAM VARIABLES
-  stop_right_source: &stop_right_source { formula: 35 }
+  stop_right_source: &stop_right_source { formula: 20 }
 
 ## Time variable
 _alpha: &alpha >
-  it.unibo.learning.TimeVariable.independent(0.5)
+  it.unibo.learning.TimeVariable.independent(0.3)
+## Time variable
+_beta: &beta >
+  it.unibo.learning.TimeVariable.independent(0.03)
+
 _epsilon: &epsilon >
-  it.unibo.learning.TimeVariable.independent(0.05)
+  it.unibo.learning.TimeVariable.independent(0.01)
 _actions: &actions >
-  cats.data.NonEmptySet.of(0, 1)
+  cats.data.NonEmptySet.of(1, 0)
 
 seeds: { scenario: *episode, simulation: *episode }
 terminate: { type: AfterTime, parameters: [*episode_length] }
@@ -82,12 +86,10 @@ deployments:
         concentration: *qtable_folder
       - molecule: clock_folder
         concentration: *clock_folder
-      - molecule: gamma
-        concentration: *gamma
-      - molecule: initial_value
-        concentration: *initial_value
       - molecule: alpha
         concentration: *alpha
+      - molecule: beta
+        concentration: *beta
       - molecule: epsilon
         concentration: *epsilon
       - molecule: actions
