add scala script, improve rl base script

--- a/src/main/plot/swapSource.yml
+++ b/src/main/plot/swapSource.yml
@@ -7,8 +7,10 @@ the_plots_labels:
   - 'err_classicHopCount'
   - 'err_rlbasedHopCount'
   - 'reward'
+  - 'up'
+  - 'down'
 the_plots_formats:
-  - [0,4,5]
+  - [0,4,5, 7, 8]
   #- [0,11,12,13]
 #  - [0,2,3,4,5]
 #y_labels: ['# of requests', '# of requests','','% of utilization of workers']
@@ -18,7 +20,7 @@ line_widths:
   - [2,2,2,2,2,2,2,2,2,2,2]
 default_colors: &default_colors ["black", "black", "orange","red","yellow",
                                  "black", "blue","red",
-                                 "red", "magenta", "orange", "green", "brown"]
+                                 "magenta", "magenta", "orange", "green", "brown"]
 the_plots_colors:
   - *default_colors
 legend_position:
