--- a/src/main/yaml/swapSource.yml
+++ b/src/main/yaml/swapSource.yml
@@ -4,7 +4,7 @@ variables:
   # SIMULATION VARIABLE
   random: &random { formula: 0 }
   last_greedy_episodes: { formula: 5.0 }
-  learning_episodes: { formula: 100.0 }
+  learning_episodes: { formula: 95.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
   greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
@@ -19,7 +19,7 @@ variables:
   range: &range { formula: 8.0 }
   initial_value: &initial_value { formula: 0.0 }
   gamma: &gamma { formula: 0.9 }
-  window_size: &window_size { formula: 2 }
+  window_size: &window_size { formula: 3 }
   trajectory_size: &trajectory_size { formula: 2 }
   qtable_folder: &qtable_folder { formula: "'\"qtables\"'" }
   clock_folder: &clock_folder { formula: "'\"clock\"'" }
@@ -28,15 +28,15 @@ variables:
 
 ## Time variable
 _alpha: &alpha >
-  it.unibo.learning.TimeVariable.independent(0.3)
+  it.unibo.learning.TimeVariable.independent(0.5)
 ## Time variable
 _beta: &beta >
-  it.unibo.learning.TimeVariable.independent(0.03)
+  it.unibo.learning.TimeVariable.independent(0.05)
 
 _epsilon: &epsilon >
-  it.unibo.learning.TimeVariable.independent(0.01)
+  it.unibo.learning.TimeVariable.independent(0.00)
 _actions: &actions >
-  cats.data.NonEmptySet.of(1, 0)
+  cats.data.NonEmptySet.of(0, 1, 2)
 
 seeds: { scenario: *episode, simulation: *episode }
 terminate: { type: AfterTime, parameters: [*episode_length] }
@@ -106,6 +106,10 @@ deployments:
         concentration: false
       - molecule: episode_length
         concentration: *episode_length
+      - molecule: up
+        concentration: 0
+      - molecule: down
+        concentration: 0
 export:
   - time
   - molecule: refG
@@ -124,5 +128,9 @@ export:
     aggregators: [sum]
     value-filter: onlyfinite
   - molecule: reward
-    aggregators: [ mean ]
+    aggregators: [mean]
     value-filter: onlyfinite
+  - molecule: up
+    aggregators: [sum]
+  - molecule: down
+    aggregators: [sum]
