divide online swap source

--- a/src/test/yaml/swapSourceOnline.yml
+++ b/src/test/yaml/swapSourceOnline.yml
@@ -32,7 +32,7 @@ deployments:
           type: ExponentialTime
           parameters: [1]
         type: Event
-        actions: { type: RunScafiProgram, parameters: [it.unibo.scafi.casestudy.SwapSource, 5.0] }
+        actions: { type: RunScafiProgram, parameters: [it.unibo.scafi.casestudy.SwapSourceOnline, 5.0] }
       - program: send
 
     contents:
