--- a/src/main/yaml/swapSourceMonteCarlo.yml
+++ b/src/main/yaml/swapSourceMonteCarlo.yml
@@ -2,8 +2,8 @@ incarnation: scafi
 
 variables:
   # SIMULATION VARIABLE
-  last_greedy_episodes: { formula: 40.0 }
-  learning_episodes: { formula: 500.0 }
+  last_greedy_episodes: { formula: 0.0 }
+  learning_episodes: { formula: 100.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
   greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
@@ -17,9 +17,9 @@ variables:
       learn_ep != 0 && (ep == 0 || ep % each != 0) && ep < learn_ep
   range: &range { formula: 8.0 }
   initial_value: &initial_value { formula: 0.0 }
-  gamma: &gamma { formula: 0.9 }
+  gamma: &gamma { formula: 0.99 }
   window_size: &window_size { formula: 3 }
-  trajectory_size: &trajectory_size { formula: 2 }
+  trajectory_size: &trajectory_size { formula: 1 }
   qtable_folder: &qtable_folder { formula: "'\"qtables\"'" }
   clock_folder: &clock_folder { formula: "'\"clock\"'" }
   right_source: &right_source { formula: 'learn ? 59 : 40'}
@@ -37,10 +37,10 @@ _beta: &beta >
 #_epsilon: &epsilon >
 #  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.5, 1000)
 _epsilon: &epsilon >
-  it.unibo.learning.TimeVariable.independent(0.01)
+  it.unibo.learning.TimeVariable.independent(0.1)
 
 _actions: &actions >
-  cats.data.NonEmptySet.of(0, 1, 2)
+  cats.data.NonEmptySet.of(0, 1, 2, 3)
 
 seeds: { scenario: 0, simulation: *episode }
 terminate: { type: AfterTime, parameters: [*episode_length] }
