--- a/src/main/yaml/swapSourceOnlineMax.yml
+++ b/src/main/yaml/swapSourceOnlineMax.yml
@@ -2,8 +2,8 @@ incarnation: scafi
 
 variables:
   # SIMULATION VARIABLE
-  last_greedy_episodes: { formula: 0.0 }
-  learning_episodes: { formula: 100.0 }
+  last_greedy_episodes: { formula: 10.0 }
+  learning_episodes: { formula: 500.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
   greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
@@ -17,13 +17,13 @@ variables:
       learn_ep != 0 && (ep == 0 || ep % each != 0) && ep < learn_ep
   range: &range { formula: 8.0 }
   initial_value: &initial_value { formula: 0.0 }
-  gamma: &gamma { formula: 0.9 }
+  gamma: &gamma { formula: 0.90 }
   window_size: &window_size { formula: 3 }
   trajectory_size: &trajectory_size { formula: 2 }
   qtable_folder: &qtable_folder { formula: "'\"qtables\"'" }
   clock_folder: &clock_folder { formula: "'\"clock\"'" }
-  right_source: &right_source { formula: 'learn ? 59 : 40'}
-  left_source: &left_source { formula: 'learn ? 40 : 59' }
+  right_source: &right_source { formula: 'learn ? 59 : 60'}
+  left_source: &left_source { formula: 'learn ? 40 : 19' }
   # PROGRAM VARIABLES
   stop_right_source: &stop_right_source { formula: 20 }
 
@@ -32,15 +32,15 @@ _alpha: &alpha >
   it.unibo.learning.TimeVariable.independent(0.5)
 ## Time variable
 _beta: &beta >
-  it.unibo.learning.TimeVariable.independent(0.05)
+  it.unibo.learning.TimeVariable.independent(0.01)
 
 #_epsilon: &epsilon >
 #  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.5, 1000)
 _epsilon: &epsilon >
-  it.unibo.learning.TimeVariable.independent(0.05)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(1, 6000)
 
 _actions: &actions >
-  cats.data.NonEmptySet.of(0, 1, 2, 3)
+  cats.data.NonEmptySet.of(0, 1, 2)
 
 seeds: { scenario: 0, simulation: *episode }
 terminate: { type: AfterTime, parameters: [*episode_length] }
@@ -56,7 +56,7 @@ deployments:
     programs:
       - time-distribution: 1
         type: Event
-        actions: { type: RunScafiProgram, parameters: [it.unibo.scafi.casestudy.SwapSourceMonteCarlo, 5.0] }
+        actions: { type: RunScafiProgram, parameters: [it.unibo.scafi.casestudy.SwapSourceOnlineMax, 5.0] }
       - program: send
 
     contents:
