--- a/src/main/plot/swapSourceFull.yml
+++ b/src/main/plot/swapSourceFull.yml
@@ -4,14 +4,17 @@ the_plots_labels:
   - 'mean ref HopCount'
   - 'mean classic'
   - 'mean RL'
-  - 'err_classicHopCount'
-  - 'err_rlbasedHopCount'
+  - 'error HopCount'
+  - 'error RL HopCount'
   - 'reward'
   - 'underEstimate'
   - 'overEstimate'
-  - 'flex'
+  - 'error flex'
+  - 'error bis'
+  - 'error crf'
+  - 'error svd'
 the_plots_formats:
-  - [0,4,5]
+  - [0,4,5,7,8,9,10,11,12]
   #- [0,11,12,13]
 #  - [0,2,3,4,5]
 #y_labels: ['# of requests', '# of requests','','% of utilization of workers']
@@ -19,7 +22,7 @@ the_plots_formats:
 #  - errors
 line_widths:
   - [2,2,2,2,2,2,2,2,2,2,2]
-default_colors: &default_colors ["black", "black", "orange","red","green",
+default_colors: &default_colors ["black", "black", "orange","red","yellow",
                                  "black", "blue","red",
                                  "magenta", "brown", "orange", "green", "brown"]
 the_plots_colors:
@@ -41,6 +44,5 @@ force_limit_plot_x:
 #  1: 800
 #  3: 800
 sampling: true
-samplingField: episode
-title_prefix: 'Average error: 360 nodes'
+#title_prefix: ''
 #excluded_titles: [0]
