--- a/src/main/yaml/swapSourceOnlineTest3.yml
+++ b/src/main/yaml/swapSourceOnlineTest3.yml
@@ -2,24 +2,24 @@ incarnation: scafi
 
 variables:
   # SIMULATION VARIABLE
-  last_greedy_episodes: { formula: 10.0 }
+  last_greedy_episodes: { formula: 50.0 }
   learning_episodes: { formula: 0.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
   greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
-  episode_length: &episode_length { formula: 120 }
+  episode_length: &episode_length { formula: 150 }
   learn: &learn
     language: scala
     formula: 'false'
-  range: &range { formula: 4.0 }
+  range: &range { formula: 2.5 }
   initial_value: &initial_value { formula: 0.0 }
   gamma: &gamma { formula: 0.90 }
   window_size: &window_size { formula: 3 }
   trajectory_size: &trajectory_size { formula: 2 }
   qtable_folder: &qtable_folder { formula: "'\"qtables\"'" }
   clock_folder: &clock_folder { formula: "'\"clock\"'" }
-  right_source: &right_source { formula: '280'}
-  left_source: &left_source { formula: '39' }
+  right_source: &right_source { formula: '792'}
+  left_source: &left_source { formula: '131' }
   # PROGRAM VARIABLES
   stop_right_source: &stop_right_source { formula: 20 }
 
@@ -33,7 +33,7 @@ _beta: &beta >
 #_epsilon: &epsilon >
 #  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.5, 1000)
 _epsilon: &epsilon >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(1, 6000)
+  it.unibo.learning.TimeVariable.independent(0.0)
 
 _actions: &actions >
   cats.data.NonEmptySet.of(0, 1, 2)
@@ -44,7 +44,7 @@ environment: { type: Continuous2DEnvironment }
 network-model: { type: ConnectWithinDistance, parameters: [*range] }
 deployments:
   - type: Grid
-    parameters: [0, 0, 100, 20, 2.5, 2.5, 3.5, 3.5, 0.0, 0.0] #large
+    parameters: [0, 0, 100, 20, 1.5, 1.5, 1.5, 1.5, 0.0, 0.0] #large
     # xStart: Double, yStart: Double, xEnd: Double, yEnd: Double, xStep: Double, yStep: Double, xRand: Double, yRand: Double, xShift: Double, yShift: Double
     #type: GeometricGradientRectangle
     #parameters: [100, 0, 0, 100, 20, 0.6, 20, true, true]
@@ -110,6 +110,12 @@ deployments:
         concentration: 0
       - molecule: err_flexHopCount
         concentration: 0
+      - molecule: err_bisHopCount
+        concentration: 0
+      - molecule: err_crfHopCount
+        concentration: 0
+      - molecule: err_svdHopCount
+        concentration: 0
 export:
   - time
   - molecule: refG
@@ -137,3 +143,15 @@ export:
   - molecule: err_flexHopCount
     value-filter: onlyfinite
     aggregators: [sum]
+  - molecule: err_flexHopCount
+    value-filter: onlyfinite
+    aggregators: [sum]
+  - molecule: err_bisHopCount
+    value-filter: onlyfinite
+    aggregators: [ sum ]
+  - molecule: err_crfHopCount
+    value-filter: onlyfinite
+    aggregators: [ sum ]
+  - molecule: err_svdHopCount
+    value-filter: onlyfinite
+    aggregators: [ sum ]
