improve plotting scripts

--- a/src/main/plot/swapSource-760.yml
+++ b/src/main/plot/swapSource-760.yml
@@ -41,5 +41,5 @@ force_limit_plot_x:
 #  3: 800
 sampling: true
 samplingField: episode
-title_prefix: ''
+title_prefix: 'Average error: 760 nodes'
 #excluded_titles: [0]
