--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,7 +4,7 @@
 # To edit the original configurations go to
 # https://github.com/alejandrohdezma/sbt-scalafmt-defaults/edit/master/.scalafmt.conf
 
-version = 2.7.5
+version = 3.0.5
 
 maxColumn = 120
 
@@ -15,28 +15,7 @@ newlines {
 style = default
 
 assumeStandardLibraryStripMargin = true
-
-align {
-  stripMargin = false
-  tokens.add = [
-    {
-      code = ":=", owner = "Term.ApplyInfix"
-    },
-    {
-      code = "+=", owner = "Term.ApplyInfix"
-    },
-    {
-      code = "++=", owner = "Term.ApplyInfix"
-    },
-    {
-      code = "--=", owner = "Term.ApplyInfix"
-    },
-    {
-      code = "-=", owner = "Term.ApplyInfix"
-    }
-  ]
-}
-
+newlines.alwaysBeforeElseAfterCurlyIf = false
 binPack {
   literalArgumentLists = true
   literalsIncludeSimpleExpr = true
@@ -56,8 +35,6 @@ rewrite {
   redundantBraces.maxLines = 1
   redundantBraces.stringInterpolation = true
 }
-
-includeCurlyBraceInSelectChains = false
 
 includeNoParensInSelectChains = false
 
