--- a/src/main/plot/swapSource.yml
+++ b/src/main/plot/swapSource.yml
@@ -8,16 +8,17 @@ the_plots_labels:
   - 'reward'
   - 'underEstimate'
   - 'overEstimate'
-  - 'flex'
+  - 'error flex'
+  - 'error bis'
 the_plots_formats:
-  - [0,4,5]
+  - [0,4,5,9,10]
   #- [0,11,12,13]
 #  - [0,2,3,4,5]
 #y_labels: ['# of requests', '# of requests','','% of utilization of workers']
 #file_suffixes:
 #  - errors
 line_widths:
-  - [2,2,2,2,2,2,2,2,2,2,2]
+  - [2,2,2,2,2,2,2,2,2,2,2,2]
 default_colors: &default_colors ["black", "black", "orange","red","green",
                                  "black", "blue","red",
                                  "magenta", "brown", "orange", "green", "brown"]
@@ -39,7 +40,5 @@ force_limit_plot_x:
 #  0: 820
 #  1: 800
 #  3: 800
-sampling: true
-samplingField: episode
 title_prefix: ''
 #excluded_titles: [0]
