--- a/src/main/yaml/swapSourceOnline.yml
+++ b/src/main/yaml/swapSourceOnline.yml
@@ -2,8 +2,8 @@ incarnation: scafi
 
 variables:
   # SIMULATION VARIABLE
-  last_greedy_episodes: { formula: 1.0 }
-  learning_episodes: { formula: 10.0 }
+  last_greedy_episodes: { formula: 3.0 }
+  learning_episodes: { formula: 50.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
   greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
@@ -17,7 +17,7 @@ variables:
       learn_ep != 0 && (ep == 0 || ep % each != 0) && ep < learn_ep
   range: &range { formula: 8.0 }
   initial_value: &initial_value { formula: 0.0 }
-  gamma: &gamma { formula: 0.9 }
+  gamma: &gamma { formula: 0.99 }
   window_size: &window_size { formula: 3 }
   trajectory_size: &trajectory_size { formula: 2 }
   qtable_folder: &qtable_folder { formula: "'\"qtables\"'" }
@@ -29,16 +29,16 @@ variables:
 
 ## Time variables
 _alpha: &alpha >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.2, 7)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.5, 25)
 _beta: &beta >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.01, 7)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.05, 25)
 _epsilon: &epsilon >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.50, 3)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.01, 30)
 
 _actions: &actions >
   cats.data.NonEmptySet.of(0, 1, 2)
 
-seeds: { scenario: 0, simulation: *episode }
+seeds: { scenario: 0, simulation: 0 } # put episode to make round firing different
 terminate: { type: AfterTime, parameters: [*episode_length] }
 environment: { type: Continuous2DEnvironment }
 network-model: { type: ConnectWithinDistance, parameters: [*range] }
@@ -57,6 +57,8 @@ deployments:
       - molecule: classicHopCount
         concentration: 0
       - molecule: rlbasedHopCount
+        concentration: 0
+      - molecule: err_oldRl
         concentration: 0
       - molecule: refG
         concentration: 0
@@ -138,3 +140,6 @@ export:
   - molecule: err_bis
     value-filter: onlyfinite
     aggregators: [sum]
+  - molecule: err_oldRl
+    value-filter: onlyfinite
+    aggregators: [ sum ]
