--- a/src/main/yaml/swapSourceOnline.yml
+++ b/src/main/yaml/swapSourceOnline.yml
@@ -3,7 +3,7 @@ incarnation: scafi
 variables:
   # SIMULATION VARIABLE
   last_greedy_episodes: { formula: 2.0 }
-  learning_episodes: { formula: 58.0 }
+  learning_episodes: { formula: 100.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
   greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
@@ -22,8 +22,8 @@ variables:
   trajectory_size: &trajectory_size { formula: 2 }
   qtable_folder: &qtable_folder { formula: "'\"qtables\"'" }
   clock_folder: &clock_folder { formula: "'\"clock\"'" }
-  right_source: &right_source { formula: 'learn ? 0 : 0'}
-  left_source: &left_source { formula: 'learn ? 19 : 19' }
+  right_source: &right_source { formula: 'episode % 2 == 0 ? 0 : 0'}
+  left_source: &left_source { formula: 'episode % 2 == 0 ? 19 : 19' }
   # PROGRAM VARIABLES
   stop_right_source: &stop_right_source { formula: 35 }
 
@@ -44,7 +44,7 @@ environment: { type: Continuous2DEnvironment }
 network-model: { type: ConnectWithinDistance, parameters: [*range] }
 deployments:
   - type: Grid
-    parameters: [0, 0, 200, 5, 5, 5, 0.5, 0.5, 0.0, 0.0] #large
+    parameters: [0, 0, 100, 5, 5, 5, 0.5, 0.5, 0.0, 0.0] #large
     programs:
       - time-distribution: 1
         type: Event
