major: refactor rl algorithm defintion, improve algorithm usage

--- a/src/main/plot/swapSource.yml
+++ b/src/main/plot/swapSource.yml
@@ -1,23 +1,19 @@
 the_plots_labels:
   - Time                 #0
-  - 'mean ref HopCount'
+  - 'mean optimal HopCount'
   - 'mean classic'
-  - 'mean crf like RL'
-  - 'error HopCount'
-  - 'error crf like RL HopCount'
-  - 'reward'
-  - 'overestimate'
-  - 'underestiamate'
+  - 'mean bis'
+  - 'mean crf'
+  - 'mean temporal RL'
+  - 'mean crf RL'
+  - 'error Classic'
+  - 'error Temporal RL'
+  - 'error crf RL'
   - 'error crf'
   - 'error bis'
-  - 'error old rl'
 the_plots_formats:
-  - [0,4,5]
-  #- [0,11,12,13]
-#  - [0,2,3,4,5]
-#y_labels: ['# of requests', '# of requests','','% of utilization of workers']
-#file_suffixes:
-#  - errors
+  - [0, 1, 2, 3, 4, 5, 6]
+  - [0, 7, 8, 9, 10]
 line_widths:
   - [2,2,2,2,2,2,2,2,2,2,2,2,2]
 default_colors: &default_colors ["black", "black", "orange","red","green",
