--- a/src/main/yaml/swapSourceOnline.yml
+++ b/src/main/yaml/swapSourceOnline.yml
@@ -3,7 +3,7 @@ incarnation: scafi
 variables:
   # SIMULATION VARIABLE
   last_greedy_episodes: { formula: 2.0 }
-  learning_episodes: { formula: 100.0 }
+  learning_episodes: { formula: 10.0 }
   episodes: &episodes { formula: 'learning_episodes + last_greedy_episodes' }
   greedy_each: { formula: learning_episodes }
   episode: &episode { min: 0, max: *episodes, step: 1, default: 0 }
@@ -16,12 +16,9 @@ variables:
       val learn_ep = learning_episodes.asInstanceOf[java.lang.Double].intValue;
       learn_ep != 0 && (ep == 0 || ep % each != 0) && ep < learn_ep
   range: &range { formula: 8.0 }
-  initial_value: &initial_value { formula: 0.0 }
   gamma: &gamma { formula: 0.9 }
   window_size: &window_size { formula: 3 }
   trajectory_size: &trajectory_size { formula: 2 }
-  qtable_folder: &qtable_folder { formula: "'\"qtables\"'" }
-  clock_folder: &clock_folder { formula: "'\"clock\"'" }
   right_source: &right_source { formula: 'episode % 2 == 0 ? 0 : 0'}
   left_source: &left_source { formula: 'episode % 2 == 0 ? 19 : 19' }
   # PROGRAM VARIABLES
@@ -29,11 +26,11 @@ variables:
 
 ## Time variables
 _alpha: &alpha >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.3, 40)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.3, 4)
 _beta: &beta >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.01, 40)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.01, 4)
 _epsilon: &epsilon >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.1, 20)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.1, 2)
 
 _actions: &actions >
   cats.data.NonEmptySet.of(0, 1, 2)
@@ -54,20 +51,6 @@ deployments:
     contents:
       - molecule: range
         concentration: *range
-      - molecule: classicHopCount
-        concentration: 0
-      - molecule: rlbasedHopCount
-        concentration: 0
-      - molecule: err_oldRl
-        concentration: 0
-      - molecule: refG
-        concentration: 0
-      - molecule: err_classicHopCount
-        concentration: 0
-      - molecule: err_rlbasedHopCount
-        concentration: 0
-      - molecule: reward
-        concentration: 0
       - molecule: learn
         concentration: *learn
       - molecule: episode
@@ -76,12 +59,6 @@ deployments:
         concentration: *stop_right_source
       - molecule: gamma
         concentration: *gamma
-      - molecule: initial_value
-        concentration: *initial_value
-      - molecule: qtable_folder
-        concentration: *qtable_folder
-      - molecule: clock_folder
-        concentration: *clock_folder
       - molecule: alpha
         concentration: *alpha
       - molecule: beta
@@ -102,44 +79,75 @@ deployments:
         concentration: false
       - molecule: episode_length
         concentration: *episode_length
-      - molecule: overestimate
+      ###### EXPORT DATA
+      - molecule: output_reference
         concentration: 0
-      - molecule: underestimate
+      - molecule: output_classicHopCount
         concentration: 0
+      - molecule: output_crf
+        concentration: 0
+      - molecule: output_bis
+        concentration: 0
+      #### RL OUTPUT
+      - molecule: output_temporalRL
+        concentration: 0
+      - molecule: output_crfLikeRL
+        concentration: 0
+      #### ERROR
+      - molecule: err_classicHopCount
+        concentration: 0
+      #### RL ERROR
+      - molecule: err_temporalRL
+        concentration: 0
+      - molecule: err_crfLikeRL
+        concentration: 0
+      #### STATE OF THE ART ERRORS
       - molecule: err_crf
         concentration: 0
       - molecule: err_bis
         concentration: 0
 export:
   - time
-  - molecule: refG
+  - molecule: output_reference
     aggregators: [mean]
     value-filter: onlyfinite
-  - molecule: classicHopCount
+
+  - molecule: output_classicHopCount
     aggregators: [mean]
     value-filter: onlyfinite
-  - molecule: rlbasedHopCount
+
+  - molecule: output_bis
+    aggregators: [ mean ]
+    value-filter: onlyfinite
+
+  - molecule: output_crf
     aggregators: [mean]
     value-filter: onlyfinite
+
+  - molecule: output_temporalRL
+    aggregators: [mean]
+    value-filter: onlyfinite
+
+  - molecule: output_crfLikeRL
+    aggregators: [mean]
+    value-filter: onlyfinite
+
   - molecule: err_classicHopCount
     aggregators: [sum]
     value-filter: onlyfinite
-  - molecule: err_rlbasedHopCount
+
+  - molecule: err_temporalRL
     aggregators: [sum]
     value-filter: onlyfinite
-  - molecule: reward
-    aggregators: [mean]
+
+  - molecule: err_crfLikeRL
+    aggregators: [sum]
     value-filter: onlyfinite
-  - molecule: overestimate
-    aggregators: [sum]
-  - molecule: underestimate
-    aggregators: [sum]
+
   - molecule: err_crf
     value-filter: onlyfinite
     aggregators: [sum]
+
   - molecule: err_bis
     value-filter: onlyfinite
     aggregators: [sum]
-  - molecule: err_oldRl
-    value-filter: onlyfinite
-    aggregators: [ sum ]
