major: add a deep rl version for the hop count problem -- no good results

--- a/src/main/yaml/swapSourceOnline.yml
+++ b/src/main/yaml/swapSourceOnline.yml
@@ -26,11 +26,11 @@ variables:
 
 ## Time variables
 _alpha: &alpha >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.3, 4)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.4, 4)
 _beta: &beta >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.01, 4)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.02, 4)
 _epsilon: &epsilon >
-  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.1, 2)
+  it.unibo.learning.TimeVariable.exponentialDecayFunction(0.9, 2)
 
 _actions: &actions >
   cats.data.NonEmptySet.of(0, 1, 2)
@@ -93,6 +93,10 @@ deployments:
         concentration: 0
       - molecule: output_crfLikeRL
         concentration: 0
+      - molecule: output_crfLikeWithActionRL
+        concentration: 0
+      - molecule: output_deepRL
+        concentration: 0
       #### ERROR
       - molecule: err_classicHopCount
         concentration: 0
@@ -100,6 +104,10 @@ deployments:
       - molecule: err_temporalRL
         concentration: 0
       - molecule: err_crfLikeRL
+        concentration: 0
+      - molecule: err_crfLikeWithActionRL
+        concentration: 0
+      - molecule: err_deepRL
         concentration: 0
       #### STATE OF THE ART ERRORS
       - molecule: err_crf
@@ -132,6 +140,14 @@ export:
     aggregators: [mean]
     value-filter: onlyfinite
 
+  - molecule: output_crfLikeWithActionRL
+    aggregators: [mean]
+    value-filter: onlyfinite
+
+  - molecule: output_deepRL
+    aggregators: [ mean ]
+    value-filter: onlyfinite
+
   - molecule: err_classicHopCount
     aggregators: [sum]
     value-filter: onlyfinite
@@ -141,6 +157,14 @@ export:
     value-filter: onlyfinite
 
   - molecule: err_crfLikeRL
+    aggregators: [sum]
+    value-filter: onlyfinite
+
+  - molecule: err_crfLikeWithActionRL
+    aggregators: [sum]
+    value-filter: onlyfinite
+
+  - molecule: err_deepRL
     aggregators: [sum]
     value-filter: onlyfinite
 
