--- a/src/main/plot/swapSource.yml
+++ b/src/main/plot/swapSource.yml
@@ -6,19 +6,23 @@ the_plots_labels:
   - 'mean crf'
   - 'mean temporal RL'
   - 'mean crf RL'
+  - 'mean crf with action RL'
+  - 'mean deep RL'
   - 'error Classic'
   - 'error Temporal RL'
   - 'error crf RL'
+  - 'error crf with action  RL'
+  - 'error deep RL'
   - 'error crf'
   - 'error bis'
 the_plots_formats:
-  - [0, 1, 2, 3, 4, 5, 6]
-  - [0, 7, 8, 9, 10]
+  - [0, 1, 2, 3, 4, 5, 6, 7, 8]
+  - [0, 9, 10, 11, 12, 13, 14]
 line_widths:
-  - [2,2,2,2,2,2,2,2,2,2,2,2,2]
-default_colors: &default_colors ["black", "black", "orange","red","green",
-                                 "black", "blue","red",
-                                 "magenta", "cyan", "orange", "brown", "yellow"]
+  - [2,2,2,2,2,2,2,2,2,2,2,2,2,2,2]
+default_colors: &default_colors ["black", "black", "bisque","rosybrown","linen",
+                                 "orchid", "teal", "darkviolet",
+                                 "darkorchid", "navy", "cyan", "brown", "yellow", "gray", "magenta"]
 the_plots_colors:
   - *default_colors
 legend_position:
